src/test/ui/feature-gates/feature-gate-allow_fail.stderr
error[E0658]: allow_fail attribute is currently unstable (see issue #46488)
  --> $DIR/feature-gate-allow_fail.rs:3:1
   |
LL | #[allow_fail]
   | ^^^^^^^^^^^^^
   |
   = help: add #![feature(allow_fail)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
